change Spobi to MDM
git-svn-id: http://talendforge.org/svn/tem/trunk@36944 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.engines.client/src/messages.properties
+++ b/org.talend.mdm.engines.client/src/messages.properties
@@ -1,45 +1,33 @@
-PublishOnSpagoExportWizard.publishJob=Deploy on Talend MDM
-PublishOnSpagoExportWizardPage.publishJob=Deploy job scripts to Talend MDM.
-PublishOnSpagoExportWizardPage.publishResourceError=Deploy Resource Error
-PublishOnSpagoExportWizardPage.SpecifyServer.PublishJob=specify your server to publish your job
-PublishOnSpagoExportWizardPage.chooseResource=You should choose at least one resource to export
-PublishOnSpagoExportWizardPage.jobLabel=Label
-PublishOnSpagoExportWizardPage.jobName=Name
-PublishOnSpagoExportWizardPage.jobDescription=Description
-PublishOnSpagoExportWizardPage.SpagoBI.Server=Server Talend MDM
-PublishOnSpagoExportWizardPage.spagoVisible=Talend MDM visible option
+DeployOnMDMExportWizard.publishJob=Deploy on Talend MDM
+DeployOnMDMExportWizardPage.publishJob=Deploy job scripts to Talend MDM.
+DeployOnMDMExportWizardPage.publishResourceError=Deploy Resource Error
+DeployOnMDMExportWizardPage.SpecifyServer.PublishJob=specify your server to publish your job
+DeployOnMDMExportWizardPage.chooseResource=You should choose at least one resource to export
+DeployOnMDMExportWizardPage.jobLabel=Label
+DeployOnMDMExportWizardPage.jobName=Name
+DeployOnMDMExportWizardPage.jobDescription=Description
+DeployOnMDMExportWizardPage.SpagoBI.Server=Server Talend MDM
+DeployOnMDMExportWizardPage.spagoVisible=Talend MDM visible option
 
-SpagoBiPreferencePage.technicalStatusLabel=Talend MDM server
+MDMPreferencePage.technicalStatusLabel=Talend MDM server
 
-SpagoBiServerEditor.engineColumnTitle=Engine name
-SpagoBiServerEditor.descriptionColumnTitle=Short description
-SpagoBiServerEditor.hostColumnTitle=Host
-SpagoBiServerDialog.shellText.createNewServer=Create new Talend MDM server
-SpagoBiServerDialog.shellText.editServer=Edit Talend MDM server
+MDMServerEditor.engineColumnTitle=Engine name
+MDMServerEditor.descriptionColumnTitle=Short description
+MDMServerEditor.hostColumnTitle=Host
+MDMServerDialog.shellText.createNewServer=Create new Talend MDM server
+MDMServerDialog.shellText.editServer=Edit Talend MDM server
 
-SpagoBiServerDialog.engineNameText=Engine name
-SpagoBiServerDialog.shortDescription=Short description
-SpagoBiServerDialog.host=Host
-SpagoBiServerDialog.port=Port
-SpagoBiServerDialog.login=Login
-SpagoBiServerDialog.password=Password
-SpagoBiServerDialog.applicationContext=Application context
+MDMServerDialog.engineNameText=Engine name
+MDMServerDialog.shortDescription=Short description
+MDMServerDialog.host=Host
+MDMServerDialog.port=Port
+MDMServerDialog.login=Login
+MDMServerDialog.password=Password
+MDMServerDialog.applicationContext=Application context
 
-SpagoBiServerDialog.errorMessage.engineNameLetters=Engine must be specify
-SpagoBiServerDialog.errorMessage.engineNameUsed=This engine is already used
+MDMServerDialog.errorMessage.engineNameLetters=Engine must be specify
+MDMServerDialog.errorMessage.engineNameUsed=This engine is already used
 
 JobScriptsExportWizardPage.contextPerlScripts=Context scripts
-SpagoBiPreferencePage.spagoBiCheckButton=Enable/Disable Deploy on Talend MDM
-SpagoBITalendEngineClient_0_5_0.protocolViolation=Fatal protocol violation: {0}
-SpagoBITalendEngineClient_0_5_0.serviceExcFailed=Service '{0}' execution failed
-SpagoBITalendEngineClient_0_5_0.transportError=Fatal transport error: {0}
-SpagoBITalendEngineClient.0=.
-SpagoBITalendEngineClient.1=.
-SpagoBITalendEngineClient.2=http://
-SpagoBITalendEngineClient.3=:
-SpagoBITalendEngineClient.4=/
-SpagoBITalendEngineClient.5=Fatal protocol violation: {0}
-SpagoBITalendEngineClient.6=Fatal transport error: {0}
-SpagoBITalendEngineClient.serviceFailed=Service failed
-SpagoBITalendEngineClient.unsupportEngineer=Unsupported engine version
-PublishOnSpagoExportWizardPage.Settings=Settings
+MDMPreferencePage.spagoBiCheckButton=Enable/Disable Deploy on Talend MDM
+DeployOnMDMExportWizardPage.Settings=Settings
