--- a/org.talend.mdm.engines.client/src/messages.properties
+++ b/org.talend.mdm.engines.client/src/messages.properties
@@ -1,21 +1,21 @@
-DeployOnMDMExportWizard.publishJob=Deploy on Talend MDM
+DeployOnMDMExportWizard.publishJob=Deploy to Talend MDM
 DeployOnMDMExportWizardPage.publishJob=Deploy job scripts to Talend MDM.
 DeployOnMDMExportWizardPage.publishResourceError=Deploy Resource Error
-DeployOnMDMExportWizardPage.SpecifyServer.PublishJob=specify your server to publish your job
-DeployOnMDMExportWizardPage.chooseResource=You should choose at least one resource to export
+DeployOnMDMExportWizardPage.SpecifyServer.PublishJob=specify the MDM Server the jobs will be published to
+DeployOnMDMExportWizardPage.chooseResource=You must choose at least one resource to export
 DeployOnMDMExportWizardPage.jobLabel=Label
 DeployOnMDMExportWizardPage.jobName=Name
 DeployOnMDMExportWizardPage.jobDescription=Description
-DeployOnMDMExportWizardPage.SpagoBI.Server=Server Talend MDM
+DeployOnMDMExportWizardPage.SpagoBI.Server=Talend MDM Server
 DeployOnMDMExportWizardPage.spagoVisible=Talend MDM visible option
 
-MDMPreferencePage.technicalStatusLabel=Talend MDM server
+MDMPreferencePage.technicalStatusLabel=Talend MDM Server
 
 MDMServerEditor.engineColumnTitle=Engine name
 MDMServerEditor.descriptionColumnTitle=Short description
 MDMServerEditor.hostColumnTitle=Host
-MDMServerDialog.shellText.createNewServer=Create new Talend MDM server
-MDMServerDialog.shellText.editServer=Edit Talend MDM server
+MDMServerDialog.shellText.createNewServer=New Talend MDM Server Connection
+MDMServerDialog.shellText.editServer=Edit Talend MDM Server Connection
 
 MDMServerDialog.engineNameText=Engine name
 MDMServerDialog.shortDescription=Short description
