Fix inclusions & branding
git-svn-id: http://talendforge.org/svn/tem/trunk@37017 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tementerprise/main/java/src/messages.properties
+++ b/org.talend.rcp.branding.tementerprise/main/java/src/messages.properties
@@ -2,6 +2,6 @@
 #Thu May 07 15:30:06 CEST 2009
 corporationname=Talend
 loginimagehigh=/icons/login_h.jpg
-loginimageleft=/icons/DataQuality_EE_Login.jpg
-productfullname=Talend Data Quality Enterprise Edition
-productshortname=Talend Data Quality
+loginimageleft=/icons/MDM_EE_Login.jpg
+productfullname=Talend MDM Studio Enterprise Edition (TIS TE with DQ option)
+productshortname=Talend MDM
