replace splash screens for 4.0
git-svn-id: http://talendforge.org/svn/tom/trunk@38142 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tom/src/messages.properties
+++ b/org.talend.rcp.branding.tom/src/messages.properties
@@ -2,4 +2,4 @@ productfullname=Talend MDM Studio (Community Edition)
 productshortname=TMDMCE
 corporationname=Talend
 loginimagehigh=/icons/login_h.jpg
-loginimageleft=icons/login3.0_OpenSource.jpg
+loginimageleft=icons/login_v.jpg
