Bug 15982 : Replace the product short name for the logging page
git-svn-id: http://talendforge.org/svn/tem/trunk@49144 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tementerprise/main/java/src/messages.properties
+++ b/org.talend.rcp.branding.tementerprise/main/java/src/messages.properties
@@ -4,4 +4,4 @@ corporationname=Talend
 loginimagehigh=/icons/login_h.jpg
 loginimageleft=/icons/MDM_EE_Login.jpg
 productfullname=Talend MDM Studio Enterprise Edition (TIS TE with DQ option)
-productshortname=Talend MDM
+productshortname=Talend MDM EE
